Actually URL changed

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "form-automation",
+  "name": "WI Form - Chrome Extension",
   "private": true,
   "version": "0.0.1",
   "type": "module",
